// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MedicalTermCard Snapshots should match snapshot in default state 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "height": "88%",
      "minHeight": 600,
      "padding": 32,
      "paddingHorizontal": 32,
      "paddingTop": 40,
    }
  }
>
  <RCTScrollView
    scrollEnabled={true}
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <Text
        style={
          [
            {
              "color": "#2B2B2B",
              "fontFamily": "serif",
              "fontSize": 48,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "lineHeight": 56,
              "marginBottom": 16,
            },
            {
              "fontSize": 42,
            },
          ]
        }
      >
        Tachycardia
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "marginBottom": 8,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(91, 143, 163, 0.08)",
              "borderRadius": 20,
              "flexDirection": "row",
              "gap": 8,
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            fill="none"
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            stroke="#5B8FA3"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={1.8}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4284190627,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={1.8}
            >
              <RNSVGPath
                d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4284190627,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.8}
              />
              <RNSVGPath
                d="M16 9a5 5 0 0 1 0 6"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4284190627,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.8}
              />
              <RNSVGPath
                d="M19.364 18.364a9 9 0 0 0 0-12.728"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4284190627,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.8}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              {
                "color": "#6A6A6A",
                "fontFamily": "monospace",
                "fontSize": 16,
              }
            }
          >
            tak-ih-KAR-dee-ah
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9B9B9B",
              "fontSize": 13,
              "letterSpacing": 0.5,
            }
          }
        >
          ta·chy·car·di·a
        </Text>
        <Text
          style={
            {
              "color": "#9B9B9B",
              "fontSize": 13,
              "marginHorizontal": 8,
            }
          }
        >
          •
        </Text>
        <Text
          style={
            {
              "color": "#9B9B9B",
              "fontSize": 13,
              "fontStyle": "italic",
            }
          }
        >
          noun
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#9B9B9B",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 1,
            "marginBottom": 8,
            "marginTop": 4,
            "textTransform": "uppercase",
          }
        }
      >
        DEFINITION
      </Text>
      <Text
        style={
          {
            "color": "#2B2B2B",
            "fontSize": 18,
            "fontWeight": "400",
            "lineHeight": 28,
            "marginBottom": 32,
          }
        }
      >
        An abnormally rapid heart rate, typically defined as over 100 beats per minute.
      </Text>
      <Text
        style={
          {
            "color": "#5B8FA3",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 1,
            "marginBottom": 8,
            "marginTop": 8,
            "textTransform": "uppercase",
          }
        }
      >
        CLINICAL EXAMPLE
      </Text>
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 16,
            "fontStyle": "italic",
            "fontWeight": "400",
            "lineHeight": 24,
          }
        }
      >
        The patient presented with tachycardia after exercise.
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginTop": 24,
            "opacity": 1,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#5B8FA3",
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": 0.5,
            }
          }
        >
          Show More
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "borderTopColor": "#F5EFE3",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-between",
        "marginTop": 16,
        "paddingTop": 16,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "position": "relative",
        }
      }
    >
      <View
        accessibilityLabel="Know It"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "backgroundColor": "rgba(143, 172, 142, 0.92)",
            "borderRadius": 16,
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={22}
          bbWidth={22}
          fill="none"
          focusable={false}
          height={22}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#FFFFFF"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 22,
                "width": 22,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="M7 10v12"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
            <RNSVGPath
              d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2a3.13 3.13 0 0 1 3 3.88Z"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "position": "relative",
        }
      }
    >
      <View
        accessibilityLabel="Don't Know"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "backgroundColor": "rgba(209, 123, 111, 0.92)",
            "borderRadius": 16,
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={22}
          bbWidth={22}
          fill="none"
          focusable={false}
          height={22}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#FFFFFF"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2.5}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 22,
                "width": 22,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2.5}
          >
            <RNSVGPath
              d="M18 6 6 18"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2.5}
            />
            <RNSVGPath
              d="m6 6 12 12"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2.5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "position": "relative",
        }
      }
    >
      <View
        accessibilityLabel="Bookmark"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "backgroundColor": "rgba(232, 182, 107, 0.92)",
            "borderRadius": 16,
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={22}
          bbWidth={22}
          fill="none"
          focusable={false}
          height={22}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#FFFFFF"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 22,
                "width": 22,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "position": "relative",
        }
      }
    >
      <View
        accessibilityLabel="Share"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "backgroundColor": "rgba(123, 170, 165, 0.92)",
            "borderRadius": 16,
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={22}
          bbWidth={22}
          fill="none"
          focusable={false}
          height={22}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#FFFFFF"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 22,
                "width": 22,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGCircle
              cx="18"
              cy="5"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              r="3"
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
            <RNSVGCircle
              cx="6"
              cy="12"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              r="3"
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
            <RNSVGCircle
              cx="18"
              cy="19"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              r="3"
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
            <RNSVGLine
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              x1="8.59"
              x2="15.42"
              y1="13.51"
              y2="17.49"
            />
            <RNSVGLine
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              x1="15.41"
              x2="8.59"
              y1="6.51"
              y2="10.49"
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`MedicalTermCard Snapshots should match snapshot when bookmarked 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "height": "88%",
      "minHeight": 600,
      "padding": 32,
      "paddingHorizontal": 32,
      "paddingTop": 40,
    }
  }
>
  <RCTScrollView
    scrollEnabled={true}
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <Text
        style={
          [
            {
              "color": "#2B2B2B",
              "fontFamily": "serif",
              "fontSize": 48,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "lineHeight": 56,
              "marginBottom": 16,
            },
            {
              "fontSize": 42,
            },
          ]
        }
      >
        Tachycardia
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "marginBottom": 8,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(91, 143, 163, 0.08)",
              "borderRadius": 20,
              "flexDirection": "row",
              "gap": 8,
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            fill="none"
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            stroke="#5B8FA3"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={1.8}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4284190627,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={1.8}
            >
              <RNSVGPath
                d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4284190627,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.8}
              />
              <RNSVGPath
                d="M16 9a5 5 0 0 1 0 6"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4284190627,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.8}
              />
              <RNSVGPath
                d="M19.364 18.364a9 9 0 0 0 0-12.728"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4284190627,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.8}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              {
                "color": "#6A6A6A",
                "fontFamily": "monospace",
                "fontSize": 16,
              }
            }
          >
            tak-ih-KAR-dee-ah
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9B9B9B",
              "fontSize": 13,
              "letterSpacing": 0.5,
            }
          }
        >
          ta·chy·car·di·a
        </Text>
        <Text
          style={
            {
              "color": "#9B9B9B",
              "fontSize": 13,
              "marginHorizontal": 8,
            }
          }
        >
          •
        </Text>
        <Text
          style={
            {
              "color": "#9B9B9B",
              "fontSize": 13,
              "fontStyle": "italic",
            }
          }
        >
          noun
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#9B9B9B",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 1,
            "marginBottom": 8,
            "marginTop": 4,
            "textTransform": "uppercase",
          }
        }
      >
        DEFINITION
      </Text>
      <Text
        style={
          {
            "color": "#2B2B2B",
            "fontSize": 18,
            "fontWeight": "400",
            "lineHeight": 28,
            "marginBottom": 32,
          }
        }
      >
        An abnormally rapid heart rate, typically defined as over 100 beats per minute.
      </Text>
      <Text
        style={
          {
            "color": "#5B8FA3",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 1,
            "marginBottom": 8,
            "marginTop": 8,
            "textTransform": "uppercase",
          }
        }
      >
        CLINICAL EXAMPLE
      </Text>
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 16,
            "fontStyle": "italic",
            "fontWeight": "400",
            "lineHeight": 24,
          }
        }
      >
        The patient presented with tachycardia after exercise.
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginTop": 24,
            "opacity": 1,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#5B8FA3",
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": 0.5,
            }
          }
        >
          Show More
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "borderTopColor": "#F5EFE3",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-between",
        "marginTop": 16,
        "paddingTop": 16,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "position": "relative",
        }
      }
    >
      <View
        accessibilityLabel="Know It"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "backgroundColor": "rgba(143, 172, 142, 0.92)",
            "borderRadius": 16,
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={22}
          bbWidth={22}
          fill="none"
          focusable={false}
          height={22}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#FFFFFF"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 22,
                "width": 22,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="M7 10v12"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
            <RNSVGPath
              d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2a3.13 3.13 0 0 1 3 3.88Z"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "position": "relative",
        }
      }
    >
      <View
        accessibilityLabel="Don't Know"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "backgroundColor": "rgba(209, 123, 111, 0.92)",
            "borderRadius": 16,
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={22}
          bbWidth={22}
          fill="none"
          focusable={false}
          height={22}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#FFFFFF"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2.5}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 22,
                "width": 22,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2.5}
          >
            <RNSVGPath
              d="M18 6 6 18"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2.5}
            />
            <RNSVGPath
              d="m6 6 12 12"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2.5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "position": "relative",
        }
      }
    >
      <View
        accessibilityLabel="Remove bookmark"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "backgroundColor": "rgba(232, 182, 107, 0.92)",
            "borderRadius": 16,
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={22}
          bbWidth={22}
          fill="#FFFFFF"
          focusable={false}
          height={22}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#FFFFFF"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 22,
                "width": 22,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z"
              fill={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "position": "relative",
        }
      }
    >
      <View
        accessibilityLabel="Share"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "backgroundColor": "rgba(123, 170, 165, 0.92)",
            "borderRadius": 16,
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={22}
          bbWidth={22}
          fill="none"
          focusable={false}
          height={22}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#FFFFFF"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 22,
                "width": 22,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGCircle
              cx="18"
              cy="5"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              r="3"
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
            <RNSVGCircle
              cx="6"
              cy="12"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              r="3"
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
            <RNSVGCircle
              cx="18"
              cy="19"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              r="3"
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
            <RNSVGLine
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              x1="8.59"
              x2="15.42"
              y1="13.51"
              y2="17.49"
            />
            <RNSVGLine
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              x1="15.41"
              x2="8.59"
              y1="6.51"
              y2="10.49"
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`MedicalTermCard Snapshots should match snapshot with details expanded 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "height": "88%",
      "minHeight": 600,
      "padding": 32,
      "paddingHorizontal": 32,
      "paddingTop": 40,
    }
  }
>
  <RCTScrollView
    scrollEnabled={true}
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <Text
        style={
          [
            {
              "color": "#2B2B2B",
              "fontFamily": "serif",
              "fontSize": 48,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "lineHeight": 56,
              "marginBottom": 16,
            },
            {
              "fontSize": 42,
            },
          ]
        }
      >
        Tachycardia
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "marginBottom": 8,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(91, 143, 163, 0.08)",
              "borderRadius": 20,
              "flexDirection": "row",
              "gap": 8,
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            fill="none"
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            stroke="#5B8FA3"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={1.8}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4284190627,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={1.8}
            >
              <RNSVGPath
                d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4284190627,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.8}
              />
              <RNSVGPath
                d="M16 9a5 5 0 0 1 0 6"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4284190627,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.8}
              />
              <RNSVGPath
                d="M19.364 18.364a9 9 0 0 0 0-12.728"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4284190627,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.8}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              {
                "color": "#6A6A6A",
                "fontFamily": "monospace",
                "fontSize": 16,
              }
            }
          >
            tak-ih-KAR-dee-ah
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9B9B9B",
              "fontSize": 13,
              "letterSpacing": 0.5,
            }
          }
        >
          ta·chy·car·di·a
        </Text>
        <Text
          style={
            {
              "color": "#9B9B9B",
              "fontSize": 13,
              "marginHorizontal": 8,
            }
          }
        >
          •
        </Text>
        <Text
          style={
            {
              "color": "#9B9B9B",
              "fontSize": 13,
              "fontStyle": "italic",
            }
          }
        >
          noun
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#9B9B9B",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 1,
            "marginBottom": 8,
            "marginTop": 4,
            "textTransform": "uppercase",
          }
        }
      >
        DEFINITION
      </Text>
      <Text
        style={
          {
            "color": "#2B2B2B",
            "fontSize": 18,
            "fontWeight": "400",
            "lineHeight": 28,
            "marginBottom": 32,
          }
        }
      >
        An abnormally rapid heart rate, typically defined as over 100 beats per minute.
      </Text>
      <Text
        style={
          {
            "color": "#5B8FA3",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 1,
            "marginBottom": 8,
            "marginTop": 8,
            "textTransform": "uppercase",
          }
        }
      >
        CLINICAL EXAMPLE
      </Text>
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 16,
            "fontStyle": "italic",
            "fontWeight": "400",
            "lineHeight": 24,
          }
        }
      >
        The patient presented with tachycardia after exercise.
      </Text>
      <View
        style={
          {
            "backgroundColor": "#FAF7F1",
            "borderLeftColor": "#5B8FA3",
            "borderLeftWidth": 4,
            "borderRadius": 16,
            "marginBottom": 16,
            "marginTop": 16,
            "padding": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#5B8FA3",
              "fontSize": 14,
              "fontWeight": "600",
              "marginBottom": 4,
            }
          }
        >
          Clinical Note:
        </Text>
        <Text
          style={
            {
              "color": "#6A6A6A",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          Common in patients with anxiety or after physical exertion.
        </Text>
      </View>
      <View
        style={
          {
            "marginBottom": 16,
            "marginTop": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#5B8FA3",
              "fontSize": 14,
              "fontWeight": "600",
              "marginBottom": 4,
            }
          }
        >
          Etymology:
        </Text>
        <Text
          style={
            {
              "color": "#6A6A6A",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          From Greek: tachy (fast) + cardia (heart)
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 8,
            "marginBottom": 16,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#5B8FA3",
              "borderRadius": 9999,
              "paddingHorizontal": 16,
              "paddingVertical": 4,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontSize": 12,
                "fontWeight": "600",
              }
            }
          >
            Cardiovascular
          </Text>
        </View>
        <View
          style={
            [
              {
                "backgroundColor": "#5B8FA3",
                "borderRadius": 9999,
                "paddingHorizontal": 16,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#5B8FA3",
              },
            ]
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontSize": 12,
                "fontWeight": "600",
              }
            }
          >
            Cardiology
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginTop": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#2B2B2B",
              "fontSize": 14,
              "fontWeight": "600",
              "marginBottom": 4,
            }
          }
        >
          Related Terms:
        </Text>
        <Text
          style={
            {
              "color": "#6A6A6A",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          bradycardia, arrhythmia, palpitations
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginTop": 24,
            "opacity": 1,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#5B8FA3",
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": 0.5,
            }
          }
        >
          Show Less
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "borderTopColor": "#F5EFE3",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-between",
        "marginTop": 16,
        "paddingTop": 16,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "position": "relative",
        }
      }
    >
      <View
        accessibilityLabel="Know It"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "backgroundColor": "rgba(143, 172, 142, 0.92)",
            "borderRadius": 16,
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={22}
          bbWidth={22}
          fill="none"
          focusable={false}
          height={22}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#FFFFFF"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 22,
                "width": 22,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="M7 10v12"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
            <RNSVGPath
              d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2a3.13 3.13 0 0 1 3 3.88Z"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "position": "relative",
        }
      }
    >
      <View
        accessibilityLabel="Don't Know"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "backgroundColor": "rgba(209, 123, 111, 0.92)",
            "borderRadius": 16,
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={22}
          bbWidth={22}
          fill="none"
          focusable={false}
          height={22}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#FFFFFF"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2.5}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 22,
                "width": 22,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2.5}
          >
            <RNSVGPath
              d="M18 6 6 18"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2.5}
            />
            <RNSVGPath
              d="m6 6 12 12"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2.5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "position": "relative",
        }
      }
    >
      <View
        accessibilityLabel="Bookmark"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "backgroundColor": "rgba(232, 182, 107, 0.92)",
            "borderRadius": 16,
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={22}
          bbWidth={22}
          fill="none"
          focusable={false}
          height={22}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#FFFFFF"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 22,
                "width": 22,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "position": "relative",
        }
      }
    >
      <View
        accessibilityLabel="Share"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "backgroundColor": "rgba(123, 170, 165, 0.92)",
            "borderRadius": 16,
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={22}
          bbWidth={22}
          fill="none"
          focusable={false}
          height={22}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#FFFFFF"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 22,
                "width": 22,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGCircle
              cx="18"
              cy="5"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              r="3"
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
            <RNSVGCircle
              cx="6"
              cy="12"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              r="3"
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
            <RNSVGCircle
              cx="18"
              cy="19"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              r="3"
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
            <RNSVGLine
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              x1="8.59"
              x2="15.42"
              y1="13.51"
              y2="17.49"
            />
            <RNSVGLine
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              x1="15.41"
              x2="8.59"
              y1="6.51"
              y2="10.49"
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`MedicalTermCard Snapshots should match snapshot with showActions=false 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "height": "88%",
      "minHeight": 600,
      "padding": 32,
      "paddingHorizontal": 32,
      "paddingTop": 40,
    }
  }
>
  <RCTScrollView
    scrollEnabled={true}
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <Text
        style={
          [
            {
              "color": "#2B2B2B",
              "fontFamily": "serif",
              "fontSize": 48,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "lineHeight": 56,
              "marginBottom": 16,
            },
            {
              "fontSize": 42,
            },
          ]
        }
      >
        Tachycardia
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "marginBottom": 8,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(91, 143, 163, 0.08)",
              "borderRadius": 20,
              "flexDirection": "row",
              "gap": 8,
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            fill="none"
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            stroke="#5B8FA3"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={1.8}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4284190627,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={1.8}
            >
              <RNSVGPath
                d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4284190627,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.8}
              />
              <RNSVGPath
                d="M16 9a5 5 0 0 1 0 6"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4284190627,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.8}
              />
              <RNSVGPath
                d="M19.364 18.364a9 9 0 0 0 0-12.728"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4284190627,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.8}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              {
                "color": "#6A6A6A",
                "fontFamily": "monospace",
                "fontSize": 16,
              }
            }
          >
            tak-ih-KAR-dee-ah
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9B9B9B",
              "fontSize": 13,
              "letterSpacing": 0.5,
            }
          }
        >
          ta·chy·car·di·a
        </Text>
        <Text
          style={
            {
              "color": "#9B9B9B",
              "fontSize": 13,
              "marginHorizontal": 8,
            }
          }
        >
          •
        </Text>
        <Text
          style={
            {
              "color": "#9B9B9B",
              "fontSize": 13,
              "fontStyle": "italic",
            }
          }
        >
          noun
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#9B9B9B",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 1,
            "marginBottom": 8,
            "marginTop": 4,
            "textTransform": "uppercase",
          }
        }
      >
        DEFINITION
      </Text>
      <Text
        style={
          {
            "color": "#2B2B2B",
            "fontSize": 18,
            "fontWeight": "400",
            "lineHeight": 28,
            "marginBottom": 32,
          }
        }
      >
        An abnormally rapid heart rate, typically defined as over 100 beats per minute.
      </Text>
      <Text
        style={
          {
            "color": "#5B8FA3",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 1,
            "marginBottom": 8,
            "marginTop": 8,
            "textTransform": "uppercase",
          }
        }
      >
        CLINICAL EXAMPLE
      </Text>
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 16,
            "fontStyle": "italic",
            "fontWeight": "400",
            "lineHeight": 24,
          }
        }
      >
        The patient presented with tachycardia after exercise.
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginTop": 24,
            "opacity": 1,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#5B8FA3",
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": 0.5,
            }
          }
        >
          Show More
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
